--- a/.cproject
+++ b/.cproject
@@ -54,6 +54,7 @@
 									<listOptionValue builtIn="false" value="../Core/Tasks"/>
 									<listOptionValue builtIn="false" value="../hmac_sha256"/>
 									<listOptionValue builtIn="false" value="../jsmn"/>
+									<listOptionValue builtIn="false" value="../mfifo"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="true" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags.1297132068" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags" useByScannerDiscovery="true" valueType="stringList"/>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1625151393" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
@@ -81,10 +82,11 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="examples/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="hmac_sha256"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
+						<entry excluding="examples/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="hmac_sha256"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="mfifo"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
