--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "jsmn"]
 	path = jsmn
 	url = https://github.com/zserge/jsmn.git
+[submodule "mfifo"]
+	path = mfifo
+	url = https://github.com/smallsoda/mfifo.git
